--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
   <title>Gestión de Restaurantes</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="/logo.png?v=2">
+  <link rel="apple-touch-icon" href="/logo.png">
 </head>
 
 <body class="min-h-screen bg-base-200">
